Fixes and upgrade to Java 16