@@ -4,3 +4,6 @@ Final Project for INFO5100 Application Engineering and Development Course
 An application for representing a digital decentralized hospital system
 
 The data modelling is not close to being good but we had to work upon the ecosystem provided by the college and the application was developed within a week without any prior knowledge of the JavaFX framework
+
+
+--module-path "C:\Users\soodr\JFX\lib" --add-modules javafx.controls,javafx.fxml,javafx.web --add-opens=java.base/java.lang=ALL-UNNAMED --add-opens=javafx.controls/javafx.scene.control.skin=ALL-UNNAMED --add-opens=javafx.graphics/javafx.scene=ALL-UNNAMED --add-exports=javafx.graphics/com.sun.javafx.css=ALL-UNNAMED --add-exports=javafx.base/com.sun.javafx.event=ALL-UNNAMED --add-exports=javafx.controls/com.sun.javafx.scene.control=ALL-UNNAMED --add-exports=javafx.controls/com.sun.javafx.scene.control.behavior=ALL-UNNAMED --add-exports=javafx.controls/com.sun.javafx.scene.control.inputmap=ALL-UNNAMED --add-exports=javafx.graphics/com.sun.javafx.sg.prism=ALL-UNNAMED --add-opens=java.base/java.util=ALL-UNNAMED --add-opens=java.base/java.time=ALL-UNNAMED
